mudança no codigo

--- a/index.html
+++ b/index.html
@@ -289,6 +289,11 @@
             <section class="container-feedbacks">
                 <div class="slider-feedbacks">
                     <div id="next-feedbacks"></div>
+                    <h1> FEEDBACKS</h1>
+                    <div class="container-prev-filter">
+                        <div class="prev-filter"></div>
+                        <div class="prev-arrow">></div>
+                    </div>
                     <div class="list">
                         <div class="item active">
                             <div class="content">
