--- a/index.html
+++ b/index.html
@@ -351,13 +351,13 @@
                     </div>
                     <!--Slider manual Feedbacks-->
                     <div class="slider-manual-feedbacks">
-                        <ul>
-                            <li data-index="0" class="active"></li>
-                            <li data-index="1"></li>
-                            <li data-index="2"></li>
-                            <li data-index="3"></li>
-                            <li data-index="4"></li>
-                        </ul>
+                        <button class="btn active"></button>
+                        <button class="btn"></button>
+                        <button class="btn"></button>
+                        <button class="btn"></button>
+                        <button class="btn"></button>
+                        <button class="btn"></button>
+                        <button class="btn"></button>
                     </div>
                 </div>
 
