mudanças no codigo, no slider-manual e no slider-manual-feedbacks no css

--- a/index.html
+++ b/index.html
@@ -274,26 +274,25 @@
                         </div>
                     </div>
                     <div class="slider-manual">
-                        <ul>
-                            <li data-index="0"></li>
-                            <li data-index="1"></li>
-                            <li data-index="2"></li>
-                            <li data-index="3"></li>
-                            <li data-index="4"></li>
-                        </ul>
+                        <button class="btn active"></button>
+                        <button class="btn"></button>
+                        <button class="btn"></button>
+                        <button class="btn"></button>
+                        <button class="btn"></button>
                     </div>
 
                 </div>
             </section>
             <!--Container Feedbacks-->
             <section class="container-feedbacks">
+                <h1> FEEDBACKS</h1>
+                <div class="container-prev-filter">
+                    <div class="prev-filter"></div>
+                    <div class="prev-arrow">></div>
+                </div>
                 <div class="slider-feedbacks">
                     <div id="next-feedbacks"></div>
-                    <h1> FEEDBACKS</h1>
-                    <div class="container-prev-filter">
-                        <div class="prev-filter"></div>
-                        <div class="prev-arrow">></div>
-                    </div>
+               
                     <div class="list">
                         <div class="item active">
                             <div class="content">
@@ -352,8 +351,6 @@
                     <!--Slider manual Feedbacks-->
                     <div class="slider-manual-feedbacks">
                         <button class="btn active"></button>
-                        <button class="btn"></button>
-                        <button class="btn"></button>
                         <button class="btn"></button>
                         <button class="btn"></button>
                         <button class="btn"></button>
