mudanças no codigo

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                         <li><span>Inovação:</span> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium
                             nisi adipisci
                             dolore laborum praesentium atque illo, error saepe nihil, ea iste tenetur.</li>
-                        <li><span>Evoloção:</span> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium
+                        <li><span>Evolução:</span> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium
                             nisi adipisci
                             dolore laborum praesentium atque illo, error saepe nihil, ea iste tenetur.</li>
                         <li><span>Humanização:</span> Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -321,7 +321,7 @@
                                 <h2>Feedback 03</h2>
                                 <p class="elementor">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, neque?
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, ex.
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, ex
                                 </p>
                             </div>
                         </div>
